Add some Auth function